# GG_casa_norte

./: app.py  pyproject.toml
static/: script.js
static/css/: customizado.css
templates/: base.html  carrinho.html  catalogo.html  index.html  pedidos.html
