[tool.poetry]
name = "casa do norte"
version = "0.1.0"
description = "site para venda de produtos naturais"
authors = ["Alisson Araujo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
